# federated-generalization-generative

./: LICENSE.md  README.md  batch_script.sh  batch_script2.sh  batch_script3.sh  batch_script4.sh  main.py  main2.py  main3.py  main4.py
RealTabFormer/: batch_script.sh  main.py
federated_leanring_xgboost/: README.md  pyproject.toml
federated_leanring_xgboost/xgboost_quickstart/: __init__.py  client_app.py  server_app.py  task.py
federated_learning_logistic_regression/: README.md  pyproject.toml
federated_learning_logistic_regression/federatedlearninglr/: __init__.py  client_app.py  server_app.py  task.py
model/: evaluation.py  evaluation2.py  evaluation3.py  evaluation4.py  ml_models.py  ml_models2.py  ml_models3.py  ml_models4.py
model_test/: README.md  main.py
model_test/model/: evaluation.py  my_test.py
models/: README.md  main.py  main2.py  main4.py
models/model/: evaluation3.py  evaluation4.py  ml_models.py  ml_models2.py  ml_models3.py  ml_models4.py
